--- a/img/vnf-ctrl/Dockerfile
+++ b/img/vnf-ctrl/Dockerfile
@@ -10,7 +10,16 @@ RUN	apt-get update && apt-get install -y \
     iperf \
     tcpdump \
     python-pip \
-    git
+    git \
+    iperf3 \
+    curl \
+    nano \
+    bridge-utils \
+    vim \
+    arpwatch
+
+COPY README.txt /home/README.txt
 
 #RUN pip install -r ryu/tools/optional-requires
 RUN git clone https://github.com/martimy/flowmanager
+COPY qos_simple_switch_13.py qos_simple_switch_13.py
