--- a/img/vnf-wan/Dockerfile
+++ b/img/vnf-wan/Dockerfile
@@ -11,9 +11,15 @@ RUN	apt-get update && apt-get install -y \
     tcpdump \
     python-pip \
     git \
+    iperf3 \
+    curl \
+    nano \
+    bridge-utils \
+    vim \
     arpwatch
 
 COPY README.txt /home/README.txt
 
 #RUN pip install -r ryu/tools/optional-requires
 RUN git clone https://github.com/martimy/flowmanager
+COPY qos_simple_switch_13.py qos_simple_switch_13.py
